# airflow_dbt_snowflake_project

./: .pre-commit-config.yaml  Makefile  README.md  readme.md
.github/workflows/: pull-request.yml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/macros/date/: datetime.sql
dbt/models/_sources/: sources.yml
dbt/models/core/: dim_hosts.sql  dim_hosts.yml  dim_listings.sql  dim_listings.yml  dim_listings_w_hosts.sql  dim_listings_w_hosts.yml  fct_reviews.sql  fct_reviews.yml
dbt/models/report/: fullmoon_reviews.sql  fullmoon_reviews.yml
dbt/models/stage/: hosts.sql  hosts.yml  listing.sql  listing.yml  listings.sql  reviews.sql  reviews.yml
dbt/snapshots/: snapshot_listings.sql
dbt/tests/generic/: dim_listings_min_nights.sql
src/: .env.example  Dockerfile  docker-compose.override.yml  pyproject.toml  requirements.txt
src/.astro/: config.yaml
src/dags/: airbnb.py
src/utils/: dbt.py
